--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.11.5",
+    "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.2",
     "esbuild": "^0.14.39",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3"
   }
 }
