--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,6 +7,10 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 cloudinary:
+  service: Cloudinary
+  cloud_name: tommyblue11
+  api_key: 149444455393925
+  api_secret: vGGo7tNrNAKMFIeSjHegBICNo2I
   
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
