--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.11.5",
+    "@rails/actiontext": "^6.0.5",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.2",
     "esbuild": "^0.14.39",
     "sass": "^1.52.0",
+    "trix": "^2.0.0-beta.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
